--- a/web/src/App.css
+++ b/web/src/App.css
@@ -5,44 +5,24 @@
 
 .tweets-container {
   /* Define dimensions for the scrollable area */
-  width: 25rem; /* Adjust as needed */
-  height: 42rem; /* Adjust as needed */
+  width: 25%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-  /* Enable overflow scrolling */
   overflow-y: auto;
   overflow-x: hidden;
 }
 
-.tweets-container ul {
-  width: 100%;
-}
-
-.tweet {
-  display: flex;
-  flex-direction: column;
-}
-
-.tweet p {
-  font-size: small;
-}
-
 .metrics-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
+  width: 75%;
+  height: 100vh;
+  padding-left: 10px;
+  padding-right: 10px;
 
-.metrics-widgets {
-  display: flex;
-  flex-direction: row;
-}
-
-.metric {
-
-}
-
-.sentiments-table {
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 ul {
